src/main/java/com/example/estudio_api/shared/errors/SalaComEquipamentosException.java
package com.example.estudio_api.shared.errors;

public class SalaComEquipamentosException extends RuntimeException {
    
    public SalaComEquipamentosException(String message){
        super(message);
    }
    
}
